--- a/boundless_doc/static/opengeo.css
+++ b/boundless_doc/static/opengeo.css
@@ -228,6 +228,7 @@ float: left;
 margin-left: 0px;
 margin-bottom: 20px;
 padding: 0;
+line-height: 1.5em;
 }
 #one_main, .one_main,
 #two_span, .two_span,
