--- a/boundless_doc/static/style.css
+++ b/boundless_doc/static/style.css
@@ -686,7 +686,7 @@ ol ul {
   margin-bottom: 0;
 }
 li {
-  line-height: 1.5em;
+  line-height: inherit;
 }
 ul.unstyled,
 ol.unstyled {
